--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.10.0",
     "esbuild": "^0.21.4",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   }
 }
