--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@astrojs/react": "^3.5.0",
     "@astrojs/svelte": "^5.5.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@radix-ui/react-slider": "^1.1.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.10.0",
+    "clsx": "^2.1.1",
     "esbuild": "^0.21.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "svelte": "^4.2.18",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5",
     "zustand": "^4.5.2"
