refactor: Update MusicsTable component to display playlist songs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,10 @@
       ],
       "@/lib": [
         "./src/lib/*"
-      ]
+      ],
+      "@/icons/*": [
+        "./src/icons/*"
+      ],
     },
     "jsx": "react-jsx",
     "jsxImportSource": "react"
